fix: increase modal z-index

--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 100;
 
   & > &__content {
     min-width: 400px;
